# rust_sockets

./: Cargo.toml
src/: client.rs  server.rs
